--- a/styles/global.css
+++ b/styles/global.css
@@ -35,7 +35,7 @@ h6 {
     font-size: 24px;
 }
 
-p, input, select, text, textarea, button {
+p, select, text, textarea, button {
   font-size: 16px;
 }
 button {
