--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,11 +1,13 @@
 .main {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
   padding-bottom: 4rem;
-  gap: 1.5rem
+  padding-top: 4rem;
+  gap: 1.5rem;
+  position: relative;
 }
 
 
@@ -33,11 +35,13 @@
 }
 
 .form {
+  position: absolute;
+  bottom: -5%;
   width: 80%;
   height: 10%;
   display: flex;
   align-items: center;
-  gap: 1rem
+  gap: 1rem;
 }
 
 .input {
