--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,7 @@
 body {
   height: 100%;
   width: 100%;
+  overflow-y: scroll;
   font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
