--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,3 +1,7 @@
+div:has(.main) {
+  height: 100lvh;
+}
+
 .main {
   height: 100%;
   display: flex;
@@ -7,7 +11,17 @@
   padding-bottom: 4rem;
   padding-top: 4rem;
   gap: 1.5rem;
-  position: relative;
+}
+
+.outputContainer {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  overflow-y: scroll;
+  padding-bottom: 3rem;
 }
 
 
@@ -17,7 +31,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 1.2rem
+  gap: 1.2rem;
 }
 
 .result {
@@ -35,8 +49,6 @@
 }
 
 .form {
-  position: absolute;
-  bottom: -5%;
   width: 80%;
   height: 10%;
   display: flex;
