--- a/styles/global.css
+++ b/styles/global.css
@@ -8,8 +8,17 @@
 body {
   height: 100%;
   width: 100%;
-  overflow-y: scroll;
   font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+body > div {
+  height: 100%;
+}
+
+body > div > div {
+  height: 100%;
+}
+body > div > div > header {
+  height: 100%;
 }
 
 h1 {
